# ticktick-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
claude-plugin/ticktick-cli/: README.md
claude-plugin/ticktick-cli/.claude-plugin/: plugin.json
claude-plugin/ticktick-cli/commands/: capture.md  today.md
claude-plugin/ticktick-cli/skills/operator/: SKILL.md
debug/: playwright_probe.mjs  playwright_record.mjs  playwright_watch.mjs
src/ticktick_cli/: __init__.py  __main__.py  auth.py  cli.py  config.py  dates.py  exceptions.py  output.py
src/ticktick_cli/api/: __init__.py  base.py  client.py  v1.py  v2.py
src/ticktick_cli/commands/: auth_cmd.py  calendar_cmd.py  config_cmd.py  filter_cmd.py  focus_cmd.py  folder_cmd.py  habit_cmd.py  kanban_cmd.py  project_cmd.py  schema_cmd.py  subtask_cmd.py  tag_cmd.py  task_cmd.py  template_cmd.py  user_cmd.py
src/ticktick_cli/models/: __init__.py  comment.py  filter.py  habit.py  pomodoro.py  project.py  tag.py  task.py  template.py
tests/: conftest.py  test_attachments.py  test_calendar.py  test_cli.py  test_comments.py  test_config.py  test_dates.py  test_filters.py  test_focus.py  test_kanban.py  test_models.py  test_output.py  test_retry.py  test_schema.py  test_subtask.py  test_task_extra.py  test_user.py
tests/test_commands/: test_auth.py  test_column_subtask.py  test_config_cmd.py  test_focus_user.py  test_folder.py  test_habit.py  test_project.py  test_tag.py  test_task.py
