[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticktick-cli"
version = "0.1.0"
description = "Agent-native CLI for TickTick task management — full API coverage via V1 + V2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ticktick-cli contributors" }]
keywords = ["ticktick", "cli", "tasks", "productivity", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
ticktick = "ticktick_cli.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ticktick_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # ternary — less readable with comments
    "SIM105",  # contextlib.suppress — less explicit
    "SIM117",  # nested with — sometimes clearer
]

[tool.ruff.lint.isort]
known-first-party = ["ticktick_cli"]
